src/tests/errors/17_wrong_arg_type/source.z42
namespace Demo;

class Calc {
    int Add(int a, int b) {
        return a + b;
    }
}

void Main() {
    var c = new Calc();
    var r = c.Add("hello", 2);  // wrong type for argument 1
}
